feat: add auth, search history, and image fallbacks

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,10 @@ pinecone-client
 httpx
 googlemaps
 slowapi
+slowapi
 pytest
+sqlalchemy
+bcrypt
+python-jose[cryptography]
+python-multipart
+email-validator
