--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.20.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "jwt-decode": "^4.0.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
